a1/brendan_gordon/TEST_PROGRAMS/invalidtype/anderson_santossilva/whileString.min
while "hello" do
	print "Hello";
done

